# DarwinSoft_

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: crud.py  database.py  depenndencies.py  main.py  models.py  schemas.py
app/routers/: __init__.py  auth.py  task_permissions.py  tasks.py
app/tests/: conftest.py  test_permissions.py  test_tasks.py
app/utils/: __init__.py
